--- a/tuto8/package.json
+++ b/tuto8/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "nodemon index.js"
   },
@@ -10,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "formidable": "^2.0.1",
     "linebyline": "^1.3.0",
     "request": "^2.88.2",
     "s1eep": "^1.0.9",
